# trans_proxy

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README_zh.md  Vagrantfile
.githooks/: pre-commit
.github/workflows/: ci.yml
docker/: gateway-e2e.yml
docs/: index.html  index_zh.html
docs/superpowers/plans/: 2026-03-25-configurable-ports.md
docs/superpowers/specs/: 2026-03-25-configurable-ports-design.md
e2e/: Cargo.toml
e2e/src/: common.rs  linux.rs  macos.rs  main.rs
scripts/: docker_gateway_e2e.sh  e2e_run.sh  iptables_setup.sh  iptables_teardown.sh  nftables_setup.sh  nftables_teardown.sh  optimize_linux.sh  pf_setup.sh  pf_teardown.sh
src/: config.rs  daemon.rs  dns.rs  gateway.rs  main.rs  orig_dest.rs  proxy.rs  service.rs  sni.rs  tunnel.rs  udp.rs
src/firewall/: mod.rs  nftables.rs  pf.rs
src/orig_dest/: linux.rs  macos.rs  mod.rs
src/service/: linux.rs  macos.rs  mod.rs
test_servers/: Cargo.toml
test_servers/src/: fwmark.rs  http_connect.rs  http_dest.rs  main.rs  socks5.rs  udp_echo.rs
