[package]
name = "trans_proxy"
version = "0.1.0"
edition = "2021"
description = "Transparent proxy for macOS pf redirection with upstream HTTP CONNECT proxy support"
license = "MIT"
repository = "https://github.com/madeye/trans_proxy"
authors = ["Max Lv <max.c.lv@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
socket2 = "0.5"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
libc = "0.2"
nix = { version = "0.29", features = ["ioctl"] }
